--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header nav a{
 main .conteudo{
     width:70%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #8b8888;
