--- a/style.css
+++ b/style.css
@@ -36,3 +36,11 @@ section p{
     margin-top: 10px;
     padding: 10px;
 }
+
+main{
+    width: 100%;
+    height:100%
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
