--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section p{
 
 main{
     width: 100%;
-    height:100%
+    height:100%;
     display:flex;
     align-items:center;
     justify-content:center;
