--- a/style.css
+++ b/style.css
@@ -39,8 +39,9 @@ section p{
 
 main{
     width: 100%;
-    height:100%;
+    height:100vh;
     display:flex;
     align-items:center;
     justify-content:center;
+    position:absolute;
 }
