--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 :root{
     --cor-fundo-header:#0044cc;
     --cor-texto:#ffffff;
+    --altura-header: 80px;
 }
 
 header{
     background-color:var(--cor-fundo-header);
     color: var(--cor-texto);
     padding:20px;
+    height:var(--altura-header);
 }
 
 header nav a{
@@ -39,7 +41,7 @@ section p{
 
 main{
     width: 100%;
-    height:100vh;
+    height: calc(100vh-var(--altura-header));
     display:flex;
     align-items:center;
     justify-content:center;
